Update and rename Task2.NestedDictionary.ipynb to NestedDictionary.ipynb
You are the facilitator in the ADA program for 3 tracks of your choice, here is the list of your students in those three tracks, "['Amaka disappoint', 'Nedu japan', 'Pretty cynthia', 'Nedu japan', 'Pretty cynthia', 'Pretty cynthia']", "('jon doe', 'john doe', 'john doe', 'jon bellion', 'jon bellion', 'john bellcat', 'jon doe')", "{'ada ada', 'pyhon ezege', 'dog catcher', 'bitrus beetroot', 'doja cat', 'beja rat'}",
Your first task
Create a nested dictionary students with your chosen tracks, a names key is required for each track and choose any sequence above as the value for that names key. Kindly note that each sequence in your names keys should have unique values (i.e no duplicates) and must be of type list and this must be done programatically.
Your second task,
Using your imaginative powers as a data superhero, create a scores key of type, list in each track where the first index in the names key, corresponds with the first index in the scores key.
Your third task,
Print this desired result. The top students are: [studentName] with score of [score] for [track] track, [studentName] with score of [score] for [track] track and [studentName] with score of [score] for [track] track.

--- a/NestedDictionary.ipynb
+++ b/NestedDictionary.ipynb
@@ -17,7 +17,7 @@
     "Names = ['Amaka Disappoint', 'Nedu Japan', 'Pretty Cynthia', 'Pretty Cynthia']\n",
     "Scores = [40, 50, 60]\n",
     "Data = {\n",
-    "    \"Names\" : (list(set(Names))), # converting list to set and back to list to be able to remove duplicate values in the sequence of each list in the dictionary after which individual dictionaries were created.\n",
+    "    \"Names\" : (list(set(Names))), # converting list to set and back to list to be able to remove duplicate values in the sequence of each list in the dictionary after which individual dictionaries were created
     "    'Scores': Scores\n",
     "}\n",
     "\n",
